<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sarapavas.inicioproyfinal.InicioSesion"
    android:background="@color/logic"
    android:orientation="vertical"
    android:onClick="correo"
    android:clickable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/myTextStyle.grande"
            android:text="@string/inicioSesion"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/emailU"
            style="@style/myTextStyle.pequeno"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:hint="@string/correo"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/passU"
            style="@style/myTextStyle.pequeno"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:hint="@string/contraseña"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="10sp"
            android:text="@string/inicioSesion"
            android:background="@color/white"
            android:onClick="iniciarSesion"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@color/google"
        android:layout_margin="10dp"
        android:onClick="google"
        android:clickable="true">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/google"
            android:layout_gravity="center_horizontal"/>
        <TextView
            style="@style/myTextStyle.pequeno"
            android:text="@string/sesiongooglet"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@color/facebook"
        android:onClick="correo"
        android:clickable="true"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/com_facebook_button_icon"
            android:layout_gravity="center_horizontal"/>
        <TextView
            style="@style/myTextStyle.pequeno"
            android:text="@string/sesionfacebookt"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@color/logic"
        android:layout_margin="10dp"
        android:onClick="logic"
        android:clickable="true">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>
        <TextView
            style="@style/myTextStyle.pequeno"
            android:text="@string/sesionCorreot"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>



</LinearLayout>
