<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sarapavas.inicioproyfinal.LoginCLogicActivity"
    android:orientation="vertical"
    android:background="@color/logic">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                style="@style/myTextStyle.grande"
                android:text="Registro"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:background="@color/white"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/correo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7sp"
                android:text="" />
            <EditText
                android:background="@color/white"
                android:id="@+id/pass"
                android:inputType="number"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <Button
                    android:background="@color/white"
                    android:id="@+id/cancelar"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:text="@string/cancelar"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <Button
                    android:background="@color/white"
                    android:id="@+id/registro"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:text="Registrar"/>

            </LinearLayout>
        </LinearLayout>

        </LinearLayout>
</LinearLayout>

